[package]
name = "text_layout_cmp_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cosmic-text.git = "https://github.com/pop-os/cosmic-text.git"
parley.git = "https://github.com/linebender/parley.git"

image = { version = "0.25.2", default-features = false, features = ["png"] }

peniko = "0.1.1"
skrifa = "0.20.0"
swash = "0.1.18"

tiny-skia = "0.11.4"
zeno = "0.3.1"
